# envcontract

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  NEXT_STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/envcontract/: __init__.py  cli.py  drift.py  generate.py  guard.py  parser.py  report.py  schema.py  secrets.py  validators.py
tests/: test_cli.py  test_generate_drift_guard.py  test_invariants.py  test_parser.py  test_schema.py  test_validators.py
