[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envcontract"
version = "0.1.0"
description = "The contract for your .env — validate it, catch team drift, and never commit a secret. 100% local."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hamza Mansoor" }]
keywords = ["dotenv", "env", "environment-variables", "validation", "secrets", "cli", "pre-commit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]

[project.scripts]
envcontract = "envcontract.cli:cli"

[project.urls]
Homepage = "https://github.com/hamzamansoorch/envcontract"
Issues = "https://github.com/hamzamansoorch/envcontract/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/envcontract"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
